# thread-viewer

./: Dockerfile  Makefile  README.md  example1.py  pyproject.toml  test.py
.github/workflows/: ci.yml
examples/: example1.py  example2.py
tests/: test_thread_viewer.py
thread_viewer/: __init__.py  thread_viewer.py
