[project]
name = "thread-viewer"
dynamic = ["version"]
authors = [
  { name="Emilio Reyes", email="soda480@gmail.com" },
]
description = "A lightweight terminal UI for visualizing thread pool activity in real time."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

dependencies = [
    "list2term",
    "colorama"
]

[tool.setuptools]
packages = ["thread_viewer"]

[project.urls]
"Homepage" = "https://github.com/soda480/thread-viewer"

[project.optional-dependencies]
dev = [
    "build",
    "flake8",
    "mock",
    "radon",
    "bandit",
    "coverage",
    "coverage-badge",
    "twine"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "thread_viewer.__version__"}